Fix - Map and applying style

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700&display=swap" rel="stylesheet">
 
+    <!-- Map Style -->
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.0/mapbox-gl.css' rel='stylesheet' />
     <title>Henrique Fadoni</title>
   </head>
   <body>
