Adding Description for Social Media WebSites

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,24 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
+    <!-- Description -->
+    <meta property="og:title" content="Henrique Fadoni's Portfolio" >
+    <meta property="og:description" content="Henrique Fadoni's Software Developer Portfolio. On this page, you will find his previous works, personal information, and even schedule an interview." >
+    <meta property="og:image" content="https://imgur.com/c14mbQV" >
+    <meta property="og:url" content="https://www.henriquefadoni.com" >
+
+    <meta property="twitter:title" content="Henrique Fadoni's Portfolio" >
+    <meta property="twitter:description" content="Henrique Fadoni's Software Developer Portfolio. On this page, you will find his previous works, personal information, and even schedule an interview." >
+    <meta property="twitter:image" content="https://imgur.com/c14mbQV" >
+    <meta property="twitter:url" content="https://www.henriquefadoni.com" >
+
     <meta
       name="description"
       content="Henrique Fadoni's Software Developer Portfolio. On this page, you will find his previous works, personal information, and even schedule an interview."
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap&subset=latin-ext" rel="stylesheet">
