Fix - Displaying Image Description

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
     <!-- Description -->
     <meta property="og:title" content="Henrique Fadoni's Portfolio" >
     <meta property="og:description" content="Henrique Fadoni's Software Developer Portfolio. On this page, you will find his previous works, personal information, and even schedule an interview." >
-    <meta property="og:image" content="https://imgur.com/c14mbQV" >
+    <meta property="og:image" content="https://www.henriquefadoni.com/static/media/project-6.5dfe7b88.png" >
     <meta property="og:url" content="https://www.henriquefadoni.com" >
 
     <meta property="twitter:title" content="Henrique Fadoni's Portfolio" >
     <meta property="twitter:description" content="Henrique Fadoni's Software Developer Portfolio. On this page, you will find his previous works, personal information, and even schedule an interview." >
-    <meta property="twitter:image" content="https://imgur.com/c14mbQV" >
+    <meta property="twitter:image" content="https://www.henriquefadoni.com/static/media/project-6.5dfe7b88.png" >
     <meta property="twitter:url" content="https://www.henriquefadoni.com" >
 
     <meta
